adjusted font-size and menu size to avoid extra space at bottom

--- a/src/main.scss
+++ b/src/main.scss
@@ -114,8 +114,9 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  font-size: 1.5rem;
   width: 100vw;
-  height: 7rem;
+  height: 9rem;
   background-color: #5bb044;
   .btm-link {
     color: black;
